--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -211,6 +211,12 @@ parameters:
 			path: src/PhpDoc/TypeNodeResolver.php
 
 		-
+			message: '#^Doing instanceof PHPStan\\Type\\Constant\\ConstantStringType is error\-prone and deprecated\. Use Type\:\:getConstantStrings\(\) instead\.$#'
+			identifier: phpstanApi.instanceofType
+			count: 1
+			path: src/PhpDoc/TypeNodeResolver.php
+
+		-
 			message: '#^Doing instanceof PHPStan\\Type\\Generic\\GenericObjectType is error\-prone and deprecated\.$#'
 			identifier: phpstanApi.instanceofType
 			count: 1
