Handle BcMath\Number operators for simple cases
Co-authored-by: Ondrej Mirtes <ondrej@mirtes.cz>

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -1053,6 +1053,10 @@ services:
 		arguments:
 			reportMagicProperties: %reportMagicProperties%
 			checkDynamicProperties: %checkDynamicProperties%
+	-
+		class: PHPStan\Type\Php\BcMathNumberOperatorTypeSpecifyingExtension
+		tags:
+			- phpstan.broker.operatorTypeSpecifyingExtension
 
 	-
 		class: PHPStan\Rules\Properties\UninitializedPropertyRule
