ResultCache: allow customization of params not invalidating cache

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -189,6 +189,19 @@ parameters:
 			- '1.1.1.2'
 		tmpDir: %sysGetTempDir%/phpstan-fixer
 	__validate: true
+	parametersNotInvalidatingCache:
+		- parameters.editorUrl
+		- parameters.editorUrlTitle
+		- parameters.errorFormat
+		- parameters.ignoreErrors
+		- parameters.reportUnmatchedIgnoredErrors
+		- parameters.tipsOfTheDay
+		- parameters.parallel
+		- parameters.internalErrorsCountLimit
+		- parameters.cache
+		- parameters.memoryLimitFile
+		- parameters.pro
+		- parametersSchema
 
 extensions:
 	rules: PHPStan\DependencyInjection\RulesExtension
@@ -502,6 +515,7 @@ services:
 			scanFiles: %scanFiles%
 			scanDirectories: %scanDirectories%
 			checkDependenciesOfProjectExtensionFiles: %resultCacheChecksProjectExtensionFilesDependencies%
+			parametersNotInvalidatingCache: %parametersNotInvalidatingCache%
 
 	-
 		class: PHPStan\Analyser\ResultCache\ResultCacheClearer
