--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -47,6 +47,7 @@ jobs:
           php-version: "${{ matrix.php-version }}"
           ini-file: development
           extensions: mbstring
+          ini-values: opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
 
       - name: "Install dependencies"
         run: "composer install --no-interaction --no-progress"
@@ -84,6 +85,7 @@ jobs:
           coverage: "none"
           php-version: "${{ matrix.php-version }}"
           ini-file: development
+          ini-values: opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
           extensions: mbstring
 
       - name: "Install dependencies"
@@ -121,6 +123,7 @@ jobs:
         with:
           coverage: "none"
           php-version: "8.1"
+          ini-values: opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
           ini-file: development
 
       - name: "Install dependencies"
@@ -147,6 +150,7 @@ jobs:
         with:
           coverage: "none"
           php-version: "8.1"
+          ini-values: opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
           ini-file: development
 
       - name: "Install dependencies"
