--- a/conf/config.neon
+++ b/conf/config.neon
@@ -495,6 +495,7 @@ services:
 			implicitThrows: %exceptions.implicitThrows%
 			treatPhpDocTypesAsCertain: %treatPhpDocTypesAsCertain%
 			universalObjectCratesClasses: %universalObjectCratesClasses%
+			narrowMethodScopeFromConstructor: true
 
 	-
 		class: PHPStan\Analyser\ConstantResolver
