RestrictedMethodUsageExtension (more extensions for properties etc. are coming)

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -217,6 +217,7 @@ rules:
 	- PHPStan\Rules\Debug\DumpPhpDocTypeRule
 	- PHPStan\Rules\Debug\DumpTypeRule
 	- PHPStan\Rules\Debug\FileAssertRule
+	- PHPStan\Rules\RestrictedUsage\RestrictedMethodUsageRule
 
 conditionalTags:
 	PHPStan\Rules\Exceptions\MissingCheckedExceptionInFunctionThrowsRule:
