Bleeding edge (level 2) - report `@internal` method call

--- a/conf/config.level2.neon
+++ b/conf/config.level2.neon
@@ -67,6 +67,10 @@ rules:
 	- PHPStan\Rules\Pure\PureFunctionRule
 	- PHPStan\Rules\Pure\PureMethodRule
 
+conditionalTags:
+	PHPStan\Rules\InternalTag\RestrictedInternalMethodUsageExtension:
+		phpstan.restrictedMethodUsageExtension: %featureToggles.internalTag%
+
 services:
 	-
 		class: PHPStan\Rules\Classes\MixinRule
@@ -110,3 +114,6 @@ services:
 		class: PHPStan\Rules\PhpDoc\InvalidPHPStanDocTagRule
 		tags:
 			- phpstan.rules.rule
+
+	-
+		class: PHPStan\Rules\InternalTag\RestrictedInternalMethodUsageExtension
