--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -32,6 +32,7 @@ parametersSchema:
 		skipCheckGenericClasses: listOf(string()),
 		stricterFunctionMap: bool()
 		reportPreciseLineForUnusedFunctionParameter: bool()
+		internalTag: bool()
 	])
 	fileExtensions: listOf(string())
 	checkAdvancedIsset: bool()
