--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -109,6 +109,12 @@ parameters:
 			path: src/Command/CommandHelper.php
 
 		-
+			message: '#^Call to static method expand\(\) of internal class Nette\\DI\\Helpers from outside its root namespace Nette\.$#'
+			identifier: staticMethod.internalClass
+			count: 2
+			path: src/Command/CommandHelper.php
+
+		-
 			message: '#^Parameter \#1 \$path of function dirname expects string, string\|false given\.$#'
 			identifier: argument.type
 			count: 1
@@ -119,6 +125,18 @@ parameters:
 			identifier: property.onlyWritten
 			count: 1
 			path: src/Command/CommandHelper.php
+
+		-
+			message: '#^Call to static method escape\(\) of internal class Nette\\DI\\Helpers from outside its root namespace Nette\.$#'
+			identifier: staticMethod.internalClass
+			count: 4
+			path: src/Command/ErrorFormatter/BaselineNeonErrorFormatter.php
+
+		-
+			message: '#^Call to static method escape\(\) of internal class Nette\\DI\\Helpers from outside its root namespace Nette\.$#'
+			identifier: staticMethod.internalClass
+			count: 5
+			path: src/Command/ErrorFormatter/BaselinePhpErrorFormatter.php
 
 		-
 			message: '#^Parameter \#1 \$headers \(array\<string\>\) of method PHPStan\\Command\\ErrorsConsoleStyle\:\:table\(\) should be contravariant with parameter \$headers \(array\) of method Symfony\\Component\\Console\\Style\\StyleInterface\:\:table\(\)$#'
@@ -143,6 +161,18 @@ parameters:
 			identifier: method.childParameterType
 			count: 1
 			path: src/Command/ErrorsConsoleStyle.php
+
+		-
+			message: '#^Call to static method expand\(\) of internal class Nette\\DI\\Helpers from outside its root namespace Nette\.$#'
+			identifier: staticMethod.internalClass
+			count: 1
+			path: src/DependencyInjection/ContainerFactory.php
+
+		-
+			message: '#^Call to static method merge\(\) of internal class Nette\\Schema\\Helpers from outside its root namespace Nette\.$#'
+			identifier: staticMethod.internalClass
+			count: 2
+			path: src/DependencyInjection/ContainerFactory.php
 
 		-
 			message: '#^Variable method call on Nette\\Schema\\Elements\\AnyOf\|Nette\\Schema\\Elements\\Structure\|Nette\\Schema\\Elements\\Type\.$#'
