--- a/conf/config.neon
+++ b/conf/config.neon
@@ -1003,6 +1003,9 @@ services:
 		class: PHPStan\Rules\Generics\VarianceCheck
 
 	-
+		class: PHPStan\Rules\InternalTag\RestrictedInternalUsageHelper
+
+	-
 		class: PHPStan\Rules\IssetCheck
 		arguments:
 			checkAdvancedIsset: %checkAdvancedIsset%
