--- a/conf/config.neon
+++ b/conf/config.neon
@@ -218,6 +218,8 @@ rules:
 	- PHPStan\Rules\Debug\DumpPhpDocTypeRule
 	- PHPStan\Rules\Debug\DumpTypeRule
 	- PHPStan\Rules\Debug\FileAssertRule
+	- PHPStan\Rules\RestrictedUsage\RestrictedFunctionUsageRule
+	- PHPStan\Rules\RestrictedUsage\RestrictedFunctionCallableUsageRule
 	- PHPStan\Rules\RestrictedUsage\RestrictedMethodUsageRule
 	- PHPStan\Rules\RestrictedUsage\RestrictedMethodCallableUsageRule
 	- PHPStan\Rules\RestrictedUsage\RestrictedStaticMethodUsageRule
