--- a/conf/config.neon
+++ b/conf/config.neon
@@ -1178,6 +1178,9 @@ services:
 			- phpstan.broker.dynamicFunctionReturnTypeExtension
 
 	-
+		class: PHPStan\Type\Php\ArrayColumnHelper
+
+	-
 		class: PHPStan\Type\Php\ArrayColumnFunctionReturnTypeExtension
 		tags:
 			- phpstan.broker.dynamicFunctionReturnTypeExtension
