Bleeding edge - report `new static()` in static method of abstract class

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -6,3 +6,4 @@ parameters:
 		stricterFunctionMap: true
 		reportPreciseLineForUnusedFunctionParameter: true
 		internalTag: true
+		newStaticInAbstractClassStaticMethod: true
