--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -33,6 +33,7 @@ parametersSchema:
 		stricterFunctionMap: bool()
 		reportPreciseLineForUnusedFunctionParameter: bool()
 		internalTag: bool()
+		newStaticInAbstractClassStaticMethod: bool()
 	])
 	fileExtensions: listOf(string())
 	checkAdvancedIsset: bool()
