Result cache should be invalidated when files change in paths excluded for analysis but not scanning

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -182,6 +182,14 @@ jobs:
               cd e2e/env-int-key
               env 1=1 ../../bin/phpstan analyse test.php
           - script: |
+              cd e2e/result-cache-scanned
+              ../../bin/phpstan
+              patch -b src/Generated/Foo.php < patch.patch
+              OUTPUT=$(../bashunit -a exit_code "1" "../../bin/phpstan analyse -vv --error-format raw")
+              echo "$OUTPUT"
+              ../bashunit -a contains 'Result cache not used because the metadata do not match: projectConfig, scannedFiles' "$OUTPUT"
+              ../bashunit -a contains 'Instantiated class ResultCacheE2EGenerated\Foo not found.' "$OUTPUT"
+          - script: |
               cd e2e/trait-caching
               ../../bin/phpstan analyze --no-progress --level 8 --error-format raw data/
               ../../bin/phpstan analyze --no-progress --level 8 --error-format raw data/
