--- a/conf/config.neon
+++ b/conf/config.neon
@@ -574,6 +574,7 @@ services:
 			scanFileFinder: @fileFinderScan
 			cacheFilePath: %resultCachePath%
 			analysedPaths: %analysedPaths%
+			analysedPathsFromConfig: %analysedPathsFromConfig%
 			composerAutoloaderProjectPaths: %composerAutoloaderProjectPaths%
 			usedLevel: %usedLevel%
 			cliAutoloadFile: %cliAutoloadFile%
