--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -251,3 +251,7 @@ parametersSchema:
 	analysedPathsFromConfig: listOf(string())
 	usedLevel: string()
 	cliAutoloadFile: schema(string(), nullable())
+
+	# internal - editor mode
+	singleReflectionFile: schema(string(), nullable())
+	singleReflectionInsteadOfFile: schema(string(), nullable())
