--- a/conf/config.neon
+++ b/conf/config.neon
@@ -209,6 +209,7 @@ parameters:
 
 extensions:
 	rules: PHPStan\DependencyInjection\RulesExtension
+	expandRelativePaths: PHPStan\DependencyInjection\ExpandRelativePathExtension
 	conditionalTags: PHPStan\DependencyInjection\ConditionalTagsExtension
 	parametersSchema: PHPStan\DependencyInjection\ParametersSchemaExtension
 	validateIgnoredErrors: PHPStan\DependencyInjection\ValidateIgnoredErrorsExtension
