--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		"nikic/php-parser": "^5.4.0",
 		"ondram/ci-detector": "^3.4.0",
 		"ondrejmirtes/better-reflection": "6.57.0.0",
+		"ondrejmirtes/composer-attribute-collector": "dev-main",
 		"phpstan/php-8-stubs": "0.4.12",
 		"phpstan/phpdoc-parser": "2.1.0",
 		"psr/http-message": "^1.1",
@@ -72,10 +73,17 @@
 		"platform-check": false,
 		"sort-packages": true,
 		"allow-plugins": {
-			"cweagans/composer-patches": true
+			"cweagans/composer-patches": true,
+			"ondrejmirtes/composer-attribute-collector": true,
+			"vaimo/composer-patches": true
 		}
 	},
 	"extra": {
+		"composer-attribute-collector": {
+			"include": [
+				"src"
+			]
+		},
 		"composer-exit-on-patch-failure": true,
 		"patches": {
 			"composer/ca-bundle": [
