simple-downgrade is installed globally in GitHub Actions
so that it can downgrade code before installin
g phpstan-src dependencies and running attribute collector plugin

--- a/.github/workflows/reflection-golden-test.yml
+++ b/.github/workflows/reflection-golden-test.yml
@@ -96,13 +96,15 @@ jobs:
           ini-file: development
           ini-values: memory_limit=2G
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
-
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
-        shell: bash
-        run: "vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}"
+        run: |
+          composer global require --dev ondrejmirtes/simple-downgrader:^2.0
+          echo "$(composer global config bin-dir --absolute -q)"  >> "$GITHUB_PATH"
+          simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
 
       - name: "Dump previous reflection data"
         run: "php tests/generate-reflection-test.php"
@@ -115,13 +117,15 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
-
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
-        shell: bash
-        run: "vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}"
+        run: |
+          composer global require --dev ondrejmirtes/simple-downgrader:^2.0
+          echo "$(composer global config bin-dir --absolute -q)"  >> "$GITHUB_PATH"
+          simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
 
       - name: "Reflection golden test"
         run: "make tests-golden-reflection || true"
