--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -48,13 +48,16 @@ jobs:
           ini-file: development
           extensions: mbstring
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
-
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
         shell: bash
-        run: "vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}"
+        run: |
+          composer global require --dev ondrejmirtes/simple-downgrader:^2.0
+          echo "$(composer global config bin-dir --absolute -q)"  >> "$GITHUB_PATH"
+          simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
 
       - name: "PHPStan"
         run: "make phpstan"
