--- a/compiler/composer.json
+++ b/compiler/composer.json
@@ -6,11 +6,12 @@
     "require": {
         "php": "^8.0",
         "nette/neon": "^3.0.0",
+        "ondrejmirtes/simple-downgrader": "^2.0",
         "seld/phar-utils": "^1.2",
-        "symfony/console": "^6.0.0",
-        "symfony/filesystem": "^6.0.0",
-        "symfony/finder": "^6.0.0",
-        "symfony/process": "^6.0.0"
+        "symfony/console": "^5.4.43",
+        "symfony/filesystem": "^5.4.43",
+        "symfony/finder": "^5.4.43",
+        "symfony/process": "^5.4.43"
     },
     "autoload": {
         "psr-4": {
