Validate registered services tags against implemented interface

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -215,6 +215,7 @@ extensions:
 	parametersSchema: PHPStan\DependencyInjection\ParametersSchemaExtension
 	validateIgnoredErrors: PHPStan\DependencyInjection\ValidateIgnoredErrorsExtension
 	validateExcludePaths: PHPStan\DependencyInjection\ValidateExcludePathsExtension
+	validateServiceTags: PHPStan\DependencyInjection\ValidateServiceTagsExtension
 
 conditionalTags:
 	PHPStan\Rules\Exceptions\MissingCheckedExceptionInFunctionThrowsRule:
