--- a/conf/config.neon
+++ b/conf/config.neon
@@ -1,5 +1,6 @@
 includes:
 	- parametersSchema.neon
+	- services.neon
 
 parameters:
 	bootstrapFiles:
@@ -228,14 +229,6 @@ conditionalTags:
 		phpstan.rules.rule: %checkUninitializedProperties%
 
 services:
-	-
-		class: PhpParser\BuilderFactory
-
-	-
-		class: PhpParser\NodeVisitor\NameResolver
-		arguments:
-			options:
-				preserveOriginalNames: true
 
 	-
 		class: PHPStan\Node\Printer\Printer
@@ -265,27 +258,6 @@ services:
 		class: PHPStan\Php\ComposerPhpVersionFactory
 		arguments:
 			composerAutoloaderProjectPaths: %composerAutoloaderProjectPaths%
-
-	-
-		class: PHPStan\PhpDocParser\ParserConfig
-		arguments:
-			usedAttributes:
-				lines: true
-
-	-
-		class: PHPStan\PhpDocParser\Lexer\Lexer
-
-	-
-		class: PHPStan\PhpDocParser\Parser\TypeParser
-
-	-
-		class: PHPStan\PhpDocParser\Parser\ConstExprParser
-
-	-
-		class: PHPStan\PhpDocParser\Parser\PhpDocParser
-
-	-
-		class: PHPStan\PhpDocParser\Printer\Printer
 
 	-
 		class: PHPStan\PhpDoc\TypeNodeResolverExtensionRegistryProvider
@@ -393,9 +365,6 @@ services:
 		class: PHPStan\Dependency\ExportedNodeFetcher
 		arguments:
 			parser: @defaultAnalysisParser
-
-	-
-		class: PHPStan\Dependency\ExportedNodeVisitor
 
 	-
 		class: PHPStan\DependencyInjection\Container
@@ -525,15 +494,6 @@ services:
 			usePathConstantsAsConstantString: %usePathConstantsAsConstantString%
 
 	-
-		class: PHPStan\Reflection\Annotations\AnnotationsMethodsClassReflectionExtension
-
-	-
-		class: PHPStan\Reflection\Annotations\AnnotationsPropertiesClassReflectionExtension
-
-	-
-		class: PHPStan\Reflection\BetterReflection\SourceLocator\CachingVisitor
-
-	-
 		class: PHPStan\Reflection\BetterReflection\SourceLocator\FileNodesFetcher
 		arguments:
 			parser: @defaultAnalysisParser
@@ -569,34 +529,9 @@ services:
 			additionalConstructors: %additionalConstructors%
 
 	-
-		class: PHPStan\Reflection\RequireExtension\RequireExtendsMethodsClassReflectionExtension
-
-	-
-		class: PHPStan\Reflection\RequireExtension\RequireExtendsPropertiesClassReflectionExtension
-
-	-
-		class: PHPStan\Reflection\Mixin\MixinMethodsClassReflectionExtension
-		arguments:
-			mixinExcludeClasses: %mixinExcludeClasses%
-
-	-
-		class: PHPStan\Reflection\Mixin\MixinPropertiesClassReflectionExtension
-		arguments:
-			mixinExcludeClasses: %mixinExcludeClasses%
-
-	-
-		class: PHPStan\Reflection\Php\PhpClassReflectionExtension
-		arguments:
-			parser: @defaultAnalysisParser
-			inferPrivatePropertyTypeFromConstructor: %inferPrivatePropertyTypeFromConstructor%
-
-	-
 		implement: PHPStan\Reflection\Php\PhpMethodReflectionFactory
 		arguments:
 			parser: @defaultAnalysisParser
-
-	-
-		class: PHPStan\Reflection\Php\Soap\SoapClientMethodsClassReflectionExtension
 
 	-
 		class: PHPStan\Reflection\Php\UniversalObjectCratesClassReflectionExtension
@@ -909,41 +844,6 @@ services:
 			- phpstan.broker.dynamicFunctionReturnTypeExtension
 
 	-
-		class: PHPStan\Type\Php\ReflectionGetAttributesMethodReturnTypeExtension
-		arguments:
-			className: ReflectionClass
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
-
-	-
-		class: PHPStan\Type\Php\ReflectionGetAttributesMethodReturnTypeExtension
-		arguments:
-			className: ReflectionClassConstant
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
-
-	-
-		class: PHPStan\Type\Php\ReflectionGetAttributesMethodReturnTypeExtension
-		arguments:
-			className: ReflectionFunctionAbstract
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
-
-	-
-		class: PHPStan\Type\Php\ReflectionGetAttributesMethodReturnTypeExtension
-		arguments:
-			className: ReflectionParameter
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
-
-	-
-		class: PHPStan\Type\Php\ReflectionGetAttributesMethodReturnTypeExtension
-		arguments:
-			className: ReflectionProperty
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
-
-	-
 		class: PHPStan\Type\ClosureTypeFactory
 		arguments:
 			parser: @currentPhpVersionPhpParser
@@ -1054,16 +954,6 @@ services:
 		factory: @PHPStan\Reflection\ReflectionProvider\ReflectionProviderFactory::create
 		autowired:
 			- PHPStan\Reflection\ReflectionProvider
-
-	betterReflectionSourceLocator:
-		class: PHPStan\BetterReflection\SourceLocator\Type\SourceLocator
-		factory: @PHPStan\Reflection\BetterReflection\BetterReflectionSourceLocatorFactory::create
-		autowired: false
-
-	originalBetterReflectionReflector:
-		class: PHPStan\BetterReflection\Reflector\DefaultReflector
-		arguments:
-			sourceLocator: @betterReflectionSourceLocator
 
 	betterReflectionReflector:
 		class: PHPStan\Reflection\BetterReflection\Reflector\MemoizingReflector
