--- a/conf/services.neon
+++ b/conf/services.neon
@@ -148,6 +148,17 @@ services:
 		arguments:
 			dateTimeClass: DateTimeImmutable
 
+	-
+		class: PHPStan\Rules\Exceptions\MissingCheckedExceptionInFunctionThrowsRule
+
+	-
+		class: PHPStan\Rules\Exceptions\MissingCheckedExceptionInMethodThrowsRule
+
+	-
+		class: PHPStan\Rules\Exceptions\MissingCheckedExceptionInPropertyHookThrowsRule
+
+	-
+		class: PHPStan\Rules\Properties\UninitializedPropertyRule
 
 	betterReflectionSourceLocator:
 		class: PHPStan\BetterReflection\SourceLocator\Type\SourceLocator
