Revert "More AutowiredService"
This reverts commit 61c78a6e29a3ebb29586b4e26922491e1931af6d.

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -763,6 +763,16 @@ services:
 			- phpstan.broker.dynamicFunctionReturnTypeExtension
 
 	-
+		class: PHPStan\Type\Php\LtrimFunctionReturnTypeExtension
+		tags:
+			- phpstan.broker.dynamicFunctionReturnTypeExtension
+
+	-
+		class: PHPStan\Type\Php\TrimFunctionDynamicReturnTypeExtension
+		tags:
+			- phpstan.broker.dynamicFunctionReturnTypeExtension
+
+	-
 		class: PHPStan\Type\ClosureTypeFactory
 		arguments:
 			parser: @currentPhpVersionPhpParser
