--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,19 +39,18 @@ jobs:
           coverage: "none"
           php-version: "${{ matrix.php-version }}"
 
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
 
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
         run: |
           composer install --no-interaction --no-progress --working-dir=compiler
           ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-
+          composer dump
 
       - name: "Validate Composer"
         run: "composer validate"
-
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
 
       - name: "Lint"
         run: "make lint"
