--- a/.github/workflows/reflection-golden-test.yml
+++ b/.github/workflows/reflection-golden-test.yml
@@ -96,14 +96,16 @@ jobs:
           ini-file: development
           ini-values: memory_limit=2G
 
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
+
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
         run: |
           composer install --no-interaction --no-progress --working-dir=compiler
           ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+          composer dump
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
 
       - name: "Dump previous reflection data"
         run: "php tests/generate-reflection-test.php"
@@ -116,14 +118,15 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
+
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
         run: |
           composer install --no-interaction --no-progress --working-dir=compiler
           ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+          composer dump
 
       - name: "Reflection golden test"
         run: "make tests-golden-reflection || true"
