--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,15 +54,17 @@ jobs:
           ini-file: development
           ini-values: memory_limit=2G
 
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
+
       - name: "Transform source code"
         if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
         shell: bash
         run: |
           composer install --no-interaction --no-progress --working-dir=compiler
           ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+          composer dump
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
 
       - name: "Tests"
         run: "make tests"
