--- a/compiler/composer.json
+++ b/compiler/composer.json
@@ -24,8 +24,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.1",
-        "phpstan/phpstan-phpunit": "^1.0"
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpunit/phpunit": "^9.5.1"
     },
 	"config": {
 		"platform": {
