Scaffolding for auto-fixable errors (experimental)

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -287,6 +287,11 @@ services:
 			parser: @defaultAnalysisParser
 
 	-
+		class: PHPStan\Analyser\RuleErrorTransformer
+		arguments:
+			parser: @currentPhpVersionPhpParser
+
+	-
 		class: PHPStan\Analyser\Ignore\IgnoredErrorHelper
 		arguments:
 			ignoreErrors: %ignoreErrors%
