--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	"require": {
 		"php": "^8.1",
 		"composer-runtime-api": "^2.0",
+		"bircher/php-merge": "^4.0",
 		"clue/ndjson-react": "^1.0",
 		"composer/ca-bundle": "^1.2",
 		"composer/semver": "^3.4",
@@ -37,6 +38,7 @@
 		"react/promise": "^3.2",
 		"react/socket": "^1.3",
 		"react/stream": "^1.1",
+		"sebastian/diff": "^4.0",
 		"symfony/console": "^5.4.3",
 		"symfony/finder": "^5.4.3",
 		"symfony/polyfill-intl-grapheme": "^1.23",
