--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -61,6 +61,18 @@ parameters:
 			path: src/Analyser/RicherScopeGetTypeHelper.php
 
 		-
+			message: '#^Call to method __construct\(\) of internal class PhpParser\\Internal\\TokenStream from outside its root namespace PhpParser\.$#'
+			identifier: method.internalClass
+			count: 1
+			path: src/Analyser/RuleErrorTransformer.php
+
+		-
+			message: '#^Instantiation of internal class PhpParser\\Internal\\TokenStream\.$#'
+			identifier: new.internalClass
+			count: 1
+			path: src/Analyser/RuleErrorTransformer.php
+
+		-
 			message: '#^Doing instanceof PHPStan\\Type\\ConstantScalarType is error\-prone and deprecated\. Use Type\:\:isConstantScalarValue\(\) or Type\:\:getConstantScalarTypes\(\) or Type\:\:getConstantScalarValues\(\) instead\.$#'
 			identifier: phpstanApi.instanceofType
 			count: 2
@@ -101,6 +113,24 @@ parameters:
 			identifier: missingType.generics
 			count: 1
 			path: src/Collectors/Registry.php
+
+		-
+			message: '#^Call to method getContent\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
+			identifier: method.internalClass
+			count: 2
+			path: src/Command/AnalyseCommand.php
+
+		-
+			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Hunk from outside its root namespace PhpMerge\.$#'
+			identifier: staticMethod.internalClass
+			count: 2
+			path: src/Command/AnalyseCommand.php
+
+		-
+			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
+			identifier: staticMethod.internalClass
+			count: 5
+			path: src/Command/AnalyseCommand.php
 
 		-
 			message: '#^Anonymous function has an unused use \$container\.$#'
@@ -203,6 +233,24 @@ parameters:
 			identifier: argument.type
 			count: 1
 			path: src/Diagnose/PHPStanDiagnoseExtension.php
+
+		-
+			message: '#^Call to method getTokenCode\(\) of internal class PhpParser\\Internal\\TokenStream from outside its root namespace PhpParser\.$#'
+			identifier: method.internalClass
+			count: 1
+			path: src/Fixable/PhpPrinterIndentationDetectorVisitor.php
+
+		-
+			message: '#^Parameter \$origTokens of method PHPStan\\Fixable\\PhpPrinterIndentationDetectorVisitor\:\:__construct\(\) has typehint with internal class PhpParser\\Internal\\TokenStream\.$#'
+			identifier: parameter.internalClass
+			count: 1
+			path: src/Fixable/PhpPrinterIndentationDetectorVisitor.php
+
+		-
+			message: '#^Property \$origTokens references internal class PhpParser\\Internal\\TokenStream in its type\.$#'
+			identifier: property.internalClass
+			count: 1
+			path: src/Fixable/PhpPrinterIndentationDetectorVisitor.php
 
 		-
 			message: '#^Access to property \$id of internal class Symfony\\Polyfill\\Php80\\PhpToken from outside its root namespace Symfony\.$#'
