--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -115,24 +115,6 @@ parameters:
 			path: src/Collectors/Registry.php
 
 		-
-			message: '#^Call to method getContent\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
-			identifier: method.internalClass
-			count: 2
-			path: src/Command/AnalyseCommand.php
-
-		-
-			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Hunk from outside its root namespace PhpMerge\.$#'
-			identifier: staticMethod.internalClass
-			count: 2
-			path: src/Command/AnalyseCommand.php
-
-		-
-			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
-			identifier: staticMethod.internalClass
-			count: 5
-			path: src/Command/AnalyseCommand.php
-
-		-
 			message: '#^Anonymous function has an unused use \$container\.$#'
 			identifier: closure.unusedUse
 			count: 1
@@ -233,6 +215,24 @@ parameters:
 			identifier: argument.type
 			count: 1
 			path: src/Diagnose/PHPStanDiagnoseExtension.php
+
+		-
+			message: '#^Call to method getContent\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
+			identifier: method.internalClass
+			count: 2
+			path: src/Fixable/Patcher.php
+
+		-
+			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Hunk from outside its root namespace PhpMerge\.$#'
+			identifier: staticMethod.internalClass
+			count: 2
+			path: src/Fixable/Patcher.php
+
+		-
+			message: '#^Call to static method createArray\(\) of internal class PhpMerge\\internal\\Line from outside its root namespace PhpMerge\.$#'
+			identifier: staticMethod.internalClass
+			count: 5
+			path: src/Fixable/Patcher.php
 
 		-
 			message: '#^Call to method getTokenCode\(\) of internal class PhpParser\\Internal\\TokenStream from outside its root namespace PhpParser\.$#'
