--- a/conf/services.neon
+++ b/conf/services.neon
@@ -162,6 +162,14 @@ services:
 
 	-
 		class: SebastianBergmann\Diff\Differ
+		arguments:
+			outputBuilder: @SebastianBergmann\Diff\Output\UnifiedDiffOutputBuilder
+
+	-
+		class: SebastianBergmann\Diff\Output\UnifiedDiffOutputBuilder
+		arguments:
+			header: ''
+			addLineNumbers: true
 
 	betterReflectionSourceLocator:
 		class: PHPStan\BetterReflection\SourceLocator\Type\SourceLocator
