--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
 	"require": {
 		"php": "^8.1",
 		"composer-runtime-api": "^2.0",
-		"bircher/php-merge": "^4.0",
 		"clue/ndjson-react": "^1.0",
 		"composer/ca-bundle": "^1.2",
 		"composer/semver": "^3.4",
@@ -27,6 +26,7 @@
 		"ondram/ci-detector": "^3.4.0",
 		"ondrejmirtes/better-reflection": "6.57.0.0",
 		"ondrejmirtes/composer-attribute-collector": "^1.0.0",
+		"ondrejmirtes/php-merge": "^4.1",
 		"phpstan/php-8-stubs": "0.4.12",
 		"phpstan/phpdoc-parser": "2.1.0",
 		"psr/http-message": "^1.1",
