There are two instances of JsonErrorFormatter

--- a/conf/services.neon
+++ b/conf/services.neon
@@ -169,3 +169,13 @@ services:
 		class: PHPStan\BetterReflection\Reflector\DefaultReflector
 		arguments:
 			sourceLocator: @betterReflectionSourceLocator
+
+	errorFormatter.json:
+		class: PHPStan\Command\ErrorFormatter\JsonErrorFormatter
+		arguments:
+			pretty: false
+
+	errorFormatter.prettyJson:
+		class: PHPStan\Command\ErrorFormatter\JsonErrorFormatter
+		arguments:
+			pretty: true
